--- a/R/O2Import_PyroOxyLog_Tutorial.Rmd
+++ b/R/O2Import_PyroOxyLog_Tutorial.Rmd
@@ -324,24 +324,18 @@ O2Data <- O2Data %>%
   mutate(Filename = str_remove(string = Filename, pattern = ".txt")) %>%
   mutate(Filename = str_remove(string = Filename, pattern = "../Optode/")) %>%
   mutate(Filename = str_remove(string = Filename, pattern = "Caloxy")) %>%
-  separate(Filename, into = c("Run", "FileDateTime", "Project", "FileID", "CultureID", "Ex_WL", "GrowthLight"), sep = "([\\/\\_\\.])", remove = FALSE) 
+  separate(Filename, into = c("Run", "FileDateTime", "Project", "FileID", "CultureID", "Ex_WL", "GrowthLight"), sep = "([\\/\\_\\.])", remove = FALSE) %>%
+  mutate(FileDateTime = parse_date_time(as.character(FileDateTime), orders = "ymdHM")) %>%
+  separate(FileDateTime, into = c("File_YMD", "File_HM"), sep = "([ ])", remove = FALSE)
 
 head(O2Data)
 
-
-
-%>%
-  mutate(FileTime = parse_date_time(as.character(FileTime), "hms")) %>%
-  separate(FileTime, into = c("FileYear", "FileTime"), sep = "([ ])", remove = TRUE) %>%
-  select(-c(FileYear))
-
-O2Data[1:5]
 ```
 
 ```{r prelimplot}
 O2Data %>%
   ggplot() +
-  geom_point(aes(x = LR_s, y = O2_umolL, colour = Ex_WL)) +
+  geom_point(aes(x = ETime_s, y = O2_umolL, colour = Ex_WL)) +
   scale_colour_manual(values = Colours_nm) +
   facet_grid(rows = vars(Ex_WL), cols = vars(CultureID)) +
   theme_bw()
@@ -349,7 +343,7 @@ O2Data %>%
 
 
 ```{r save SolFitsTrim data}
-saveRDS(O2Data, file.path(DataOut, paste(Project, RunDate, "O2Data.Rds", sep = "_"), fsep = .Platform$file.sep))
+saveRDS(O2Data, file.path(DataOut, paste(Project, Run, "O2Data.Rds", sep = "_"), fsep = .Platform$file.sep))
 ```
 
 
