--- a/R/O2Import_PyroOxyLog_Tutorial.Rmd
+++ b/R/O2Import_PyroOxyLog_Tutorial.Rmd
@@ -326,14 +326,18 @@ head(O2Data)
 #Generate columns from Filename
 ```{r generate columns from Filename}
 O2Data <- O2Data %>%
-  mutate(Filename = str_remove(string = Filename, pattern = ".txt")) %>%
-  mutate(Filename = str_remove(string = Filename, pattern = "../Optode/")) %>%
-  mutate(Filename = str_remove(string = Filename, pattern = "Caloxy")) %>%
-  separate(Filename, into = c("Run", "FileDateTime", "Project", "FileID", "CultureID", "Ex_WL", "GrowthLight"), sep = "([\\/\\_\\.])", remove = FALSE) %>%
+  mutate(Filename = str_remove(string = Filename, pattern = "../Optode/"),
+         Filename = str_remove(string = Filename, pattern = ".txt"),
+         Filename = str_remove(string = Filename, pattern = "caloxy")) %>%
+  separate(Filename, into = c("Run", "FileDateTime", "Project", "CultureID", "Ex_WL", "GrowthLight"), sep = "([\\/\\_\\.])", remove = FALSE) %>%
   mutate(FileDateTime = parse_date_time(as.character(FileDateTime), orders = "ymdHM")) %>%
   separate(FileDateTime, into = c("File_YMD", "File_HM"), sep = "([ ])", remove = FALSE)
 
 head(O2Data)
+
+#for compatibility add TempCont column
+O2Data <- O2Data %>%
+  mutate(TempCont = "TC")
 
 ```
 Fix column classes
