--- a/R/O2Import_PyroOxyLog_Tutorial.Rmd
+++ b/R/O2Import_PyroOxyLog_Tutorial.Rmd
@@ -334,7 +334,9 @@ O2Data <- O2Data %>%
          Filename = str_remove(string = Filename, pattern = "caloxy_")) %>%
   separate(Filename, into = c("Run", "FileDateTime", "Project", "CultureID", "Ex_WL", "GrowthLight"), sep = "([\\/\\_\\.])", remove = FALSE) %>%
   mutate(FileDateTime = parse_date_time(as.character(FileDateTime), orders = "ymdHM")) %>%
-  separate(FileDateTime, into = c("File_YMD", "File_HM"), sep = "([ ])", remove = FALSE)
+  separate(FileDateTime, into = c("ObsDate", "ObsTime"), sep = "([ ])", remove = FALSE) %>%
+  mutate(ObsDate = ymd(ObsDate),
+         ObsTime = hm(ObsTime))
 
 head(O2Data)
 
